manifests/linkerd-viz/ingressroute-grafana.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: linkerd-viz
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`stats.claytonc.dev`)
      kind: Rule
      middlewares: 
        - name: traefik-local-whitelist@kubernetescrd
        - name: traefik-l5d-header@kubernetescrd
      services:
      - name: grafana
        port: 3000
  tls:
    secretName: grafana-tls
